// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractTypeDefinitionFromViewSql should be able to extract types even when one of the columns has the word "from" in it 1`] = `
TypeDefinitionOfResourceView {
  "name": "view_email_current",
  "selectExpressions": Array [
    TypeDefinitionOfQuerySelectExpression {
      "alias": "id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "uuid",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.uuid",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "external_id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.external_id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "ses_message_id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.ses_message_id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "to_address",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.to_address",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "from_address",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.from_address",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "from_name",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.from_name",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "subject",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.subject",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "body",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.body",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "status",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.status",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "created_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.created_at",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "effective_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.effective_at",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "updated_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.created_at",
      },
    },
  ],
  "tableReferences": Array [
    TypeDefinitionOfQueryTableReference {
      "alias": "s",
      "tableName": "email",
    },
    TypeDefinitionOfQueryTableReference {
      "alias": "cvp",
      "tableName": "email_cvp",
    },
    TypeDefinitionOfQueryTableReference {
      "alias": "v",
      "tableName": "email_version",
    },
  ],
}
`;

exports[`extractTypeDefinitionFromViewSql should be able to extract types in this example 1`] = `
TypeDefinitionOfResourceView {
  "name": "view_suggestion_current",
  "selectExpressions": Array [
    TypeDefinitionOfQuerySelectExpression {
      "alias": "id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "uuid",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.uuid",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "suggestion_source",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.suggestion_source",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "external_id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.external_id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "status",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.status",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "result",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.result",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "created_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.created_at",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "effective_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.effective_at",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "updated_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.created_at",
      },
    },
  ],
  "tableReferences": Array [
    TypeDefinitionOfQueryTableReference {
      "alias": "s",
      "tableName": "suggestion",
    },
    TypeDefinitionOfQueryTableReference {
      "alias": "cvp",
      "tableName": "suggestion_cvp",
    },
    TypeDefinitionOfQueryTableReference {
      "alias": "v",
      "tableName": "suggestion_version",
    },
  ],
}
`;

exports[`extractTypeDefinitionFromViewSql should be able to extract types in this other example 1`] = `
TypeDefinitionOfResourceView {
  "name": "view_job_current",
  "selectExpressions": Array [
    TypeDefinitionOfQuerySelectExpression {
      "alias": "id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "uuid",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.uuid",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "title",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.title",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "status",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.status",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "description",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.description",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "location_id",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.location_id",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "photo_ids",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": "array_agg.output",
        "tableReferencePath": null,
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "created_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "s.created_at",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "effective_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.effective_at",
      },
    },
    TypeDefinitionOfQuerySelectExpression {
      "alias": "updated_at",
      "typeReference": TypeDefinitionReference {
        "functionReferencePath": null,
        "tableReferencePath": "v.created_at",
      },
    },
  ],
  "tableReferences": Array [
    TypeDefinitionOfQueryTableReference {
      "alias": "s",
      "tableName": "job",
    },
    TypeDefinitionOfQueryTableReference {
      "alias": "cvp",
      "tableName": "job_cvp",
    },
    TypeDefinitionOfQueryTableReference {
      "alias": "v",
      "tableName": "job_version",
    },
  ],
}
`;
